tests/machine/x/kotlin/tree_sum.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/tree_sum.kt:28:17: error: null can not be a value of a non-null type Int
        else -> null
                ^
