tests/machine/x/kotlin/tree_sum.kt
// Generated by Mochi compiler v0.10.26 on 2025-07-17T00:46:54Z
fun String.starts_with(prefix: String): Boolean = this.startsWith(prefix)
// Code generated from tree_sum.mochi

sealed class Tree

object Leaf : Tree()
data class Node(val left: Tree, val value: Int, val right: Tree) : Tree()

val t = Node(left = Leaf, value = 1, right = Node(left = Leaf, value = 2, right = Leaf))

/**
 * Auto-generated from Mochi
 * @param t Tree
 * @return Int
 */
fun sum_tree(t: Tree): Int {
    return run {
    val __t = t
    when (__t) {
        Leaf -> 0
        is Node -> {
            val left = __t.left
            val value = __t.value
            val right = __t.right
            sum_tree(left) + value + sum_tree(right)
        }
        else -> null
    }
}
}

fun main() {
    println(sum_tree(t))
}
